...
                    crossAxisAlignment: CrossAxisAlignment.stretch,
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      const AppLogo(height: 100),
                      const SizedBox(height: 16),
                      const Text(
                        'BEM-VINDO',
                        textAlign: TextAlign.center,
                        style: TextStyle(
                          color: whiteColor,
                          fontSize: 28,
                          fontWeight: FontWeight.w300,
                          letterSpacing: 4,
...
                        ),
                      ),
                      const SizedBox(height: 48),

                      AuthTextField(
                        controller: viewModel.identifierController,
                        labelText: 'E-mail ou Matrícula',
                        prefixIcon: Icons.person_outline,
                        keyboardType: TextInputType.emailAddress,
                        textInputAction: TextInputAction.next,
                        validator: viewModel.identifierValidator,
                      ),
                      const SizedBox(height: 16),
                      AuthTextField(
                        controller: viewModel.passwordController,
                        labelText: 'Senha',
                        prefixIcon: Icons.lock_outline,
                        obscureText: true,
                        textInputAction: TextInputAction.done,
                        onSubmitted: viewModel.loginSubmittedAction(context),
                        validator: viewModel.passwordValidator,
                      ),
...
                                    child: CircularProgressIndicator(
                                      color: primaryColor,
                                      strokeWidth: 2,
                                    ),
                                  )
                                : const Text(
                                    'ENTRAR',
                                    style: TextStyle(
                                      fontSize: 18,
                                      fontWeight: FontWeight.w900,
                                      letterSpacing: 2,
                                    ),
                                  ),
...
