...
                                child: Center(
                                  child: viewModel.isLoading
                                      ? CircularProgressIndicator(
                                          color: Theme.of(context).primaryColor,
                                        )
                                      : Text(
                                          'Nenhuma medição registrada.',
                                          style: TextStyle(
                                            color: Theme.of(
                                              context,
                                            ).colorScheme.onSurface,
                                            fontSize: 16,
                                          ),
...
